Fix/overflow with scroll on body

--- a/src/components/atoms/SearchBar/SearchBar.module.scss
+++ b/src/components/atoms/SearchBar/SearchBar.module.scss
@@ -1,5 +1,4 @@
 .SearchBar {
-  width: 100%;
   height: 45px;
   color: rgba(48, 57, 67, 1);
   font-style: book;
